# ParkinsonDisease_ProteinClassifier

./: README.md  main.py  pyproject.toml
data/: ProtrWeb-aac-2024-10-30-17-59-46.csv  ProtrWeb-aac-2024-10-30-18-07-45.csv  cleaned_output (1).fasta  uniprotkb_parkinson_disease_protein_AND_2024_11_15.fasta
src/: data_analysis.py  data_processing.py  feature_extraction.py  model.py  model_evaluation.py  visualization.py
src/models/: lstm.py
